# openai_telegram_bot

./: .env  .gitignore  Dockerfile  README.md  bot.py  context.py  docker-compose.yml  pyproject.toml
database/: connection.py  models.py
src/: bot.py  config.py  context.py
src/alembic/: env.py
src/alembic/versions/: 8c4f3ba60475_general.py
src/database/: connection.py  models.py
