[tool.poetry]
name = "openai_telegram_bot"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.3.7"
aiogram = "^3.2.0"
asyncio = "^3.4.3"
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"
loguru = "^0.7.2"
alembic = "^1.13.0"
pytz = "^2023.3.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
